--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,12 @@
       integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700&family=Montserrat:wght@400;700&family=Open+Sans:ital,wght@0,400;1,700&family=Oswald:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700&family=Montserrat:wght@400;700&family=Open+Sans:ital,wght@0,400;1,700&family=Oswald:wght@400;700&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -39,6 +42,7 @@
       crossorigin="anonymous"
     ></script>
     <title>FlipFlash - Flashcard App</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.ico?v=2" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
